--- a/homework3.ipynb
+++ b/homework3.ipynb
@@ -175,21 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "▓▓▓▓▓▓▓~▓▓\n",
-      "▓▓  ▓▓  ▓▓\n",
-      "▓  ▓     ▓\n",
-      "▓     ▓▓ ▓\n",
-      "▓  ▓    ▓▓\n",
-      "▓   ▓    ▓\n",
+      "▓▓▓▓▓~▓▓▓▓\n",
+      "▓ ▓     ▓▓\n",
+      "▓ ▓▓  ▓  ▓\n",
       "▓ ▓   ▓  ▓\n",
-      "▓▓  ▓    ▓\n",
+      "▓        ▓\n",
+      "▓   ▓▓▓▓▓▓\n",
+      "▓▓▓   ▓ ▓▓\n",
+      "▓▓▓▓▓    ▓\n",
       "▓▓▓▓▓▓$▓▓▓\n"
      ]
     }
@@ -215,14 +215,28 @@
     "\n",
     "    return '\\n'.join([''.join(row) for row in maze])\n",
     "\n",
-    "# Пример использования функции\n",
-    "print(generate_maze(9, 10))  # Генерация лабиринта \n"
+    "\n",
+    "print(generate_maze(9, 10)) \n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
